infrastructure/controllers/base/keycloak/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: keycloak
  labels:
    admission: "true"
