infrastructure/controllers/base/keycloak/keycloak-postgres-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    commit-sha: 8b514a1cb354
  name: keycloak-postgres
  namespace: keycloak
  labels:
    app: keycloak-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgres
  strategy:
    type: Recreate
  rollingUpdate: null
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      securityContext:
        fsGroup: 70
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: postgres
        image: postgres:15-alpine
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 70
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: keycloak-postgres-data
