infrastructure/controllers/base/keycloak/keycloak-postgres-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: keycloak-postgres-service
  namespace: keycloak
spec:
  selector:
    app: keycloak-postgres
  ports:
  - port: 5432
    targetPort: 5432
