infrastructure/controllers/base/keycloak/keycloak-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: keycloak-service
  namespace: keycloak
spec:
  selector:
    app: keycloak
  ports:
  - port: 8080
    targetPort: 8080
    name: http
